--- a/style.css
+++ b/style.css
@@ -6,19 +6,36 @@
 .box{
     width: 75px;
     height: 75px;
-    border: 1px solid black;
-    background-color: rgb(212,250,76);
+    border: 0px solid black;
+    background-color: rgb(118, 212, 223);
     font-size: 3em;
     text-align: center;
     line-height: 75px;
     margin: 5px;
     animation: appear 1s;
     border-radius: 6px;
+    cursor : pointer;
+    transition : background-color 0.8s, color 0.8s, transform 0.8s;
 }
 
 .box-valid{
     background-color: #ccc;
     color: #aaa;
+    transform : scale(0.8);
+}
+
+.box.error{
+    color: rgb(163, 0, 0);
+    background-color: rgb(255, 160, 190);
+}
+.box.success{
+    color: green;
+    background: rgb(172, 251, 172);
+}
+.box.notice{
+    color: rgb(17, 91, 134);
+    background-color: rgb(184, 217, 255);
+    cursor: not-allowed;
 }
 
 @keyframes appear{
